# v2ray-gui

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  ConfigService.h  MainService.h  RunGuard.h
resource/: CMakeLists.txt  resource.qrc  resource.rc
resource/config/: settings.json
resource/theme/: style.qss
src/: CMakeLists.txt  main.cpp
src/ConfigForm/: CMakeLists.txt  ConfigForm.cpp  ConfigForm.ui
src/Services/: CMakeLists.txt  ConfigService.cpp  MainService.cpp  RunGuard.cpp
